init-文档ingest